@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-20T00:44:01Z",
-  "count_outdated" : 282,
-  "uniques_outdated" : 248,
+  "timestamp" : "2025-11-22T00:43:04Z",
+  "count_outdated" : 283,
+  "uniques_outdated" : 249,
   "count" : 286,
   "uniques" : 252,
   "clones" : [
-    {
-      "timestamp": "2025-11-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-16T00:00:00Z",
       "count": 1,
