@@ -1,3 +1,12 @@
+2025-11-22T00:43:04Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19587467749 # 816
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-22
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 248 282 / 252 286
+* notice: next accum: outdated-unq outdated-all / unq all: 249 283 / 252 286
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-11-07] / []
+
 2025-11-20T00:44:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19521303263 # 814
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-20
